// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should handle onSubmit  1`] = `
<div>
  <JobForm
    onSubmit={[Function]}
  />
</div>
`;

exports[`Should render AddJobApplication Correctly 1`] = `
<div>
  <div
    className="content-container"
  >
    <JobForm
      onSubmit={[Function]}
    />
  </div>
</div>
`;
